force-app/main/default/objects/ShipmentLine__c/ShipmentLine__c.object-meta.xml
<CustomObject>
    <description>Related object to Shipments for Shipment Lines. Shipment Lines are auto created when an Order is Released.</description>
    <label>Shipment Line</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Shipment Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>