force-app/main/default/objects/ShipmentLine__c/fields/DateAvailabletoPromise__c.field-meta.xml
<CustomField>
    <fullName>DateAvailabletoPromise__c</fullName>
    <formula>SalesOrderProductLine__r.DateAvailableToPromise__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Available to Promise</label>
    <type>Date</type>
</CustomField>