force-app/main/default/objects/ShipmentLine__c/fields/EarlyNumberofDays_del__c.field-meta.xml
<CustomField>
    <fullName>EarlyNumberofDays_del__c</fullName>
    <formula>ShipmentDate__c - DateAvailabletoPromise__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Early Number of Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>