force-app/main/default/objects/ShipmentLine__c/fields/InvoicedQuantity__c.field-meta.xml
<CustomField>
    <fullName>InvoicedQuantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Invoiced Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>