force-app/main/default/objects/ShipmentLine__c/fields/Packages__c.field-meta.xml
<CustomField>
    <fullName>Packages__c</fullName>
    <label>Packages</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>