force-app/main/default/objects/ShipmentLine__c/fields/ProductLineQuantity__c.field-meta.xml
<CustomField>
    <fullName>ProductLineQuantity__c</fullName>
    <formula>SalesOrderProductLine__r.Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>