force-app/main/default/objects/ShipmentLine__c/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Number</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Shipment Lines</relationshipLabel>
    <relationshipName>Shipment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>