force-app/main/default/objects/ShipmentLine__c/fields/SalesOrderProductLine__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderProductLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product Line</label>
    <referenceTo>SalesOrderProductLine__c</referenceTo>
    <relationshipLabel>Shipment Lines</relationshipLabel>
    <relationshipName>Shipment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>