force-app/main/default/objects/ShipmentLine__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>Shipment Number</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Shipment Lines</relationshipLabel>
    <relationshipName>Shipment_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>