force-app/main/default/objects/ShipmentLine__c/fields/ShipmentDate__c.field-meta.xml
<CustomField>
    <fullName>ShipmentDate__c</fullName>
    <formula>Shipment__r.ShipmentDate__c</formula>
    <label>Shipment Date</label>
    <type>Date</type>
</CustomField>