force-app/main/default/objects/ShipmentLine__c/validationRules/Quantity_Must_be_Greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Must_be_Greater_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c = 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Shipped Quantity must be greater than 0. If you&apos;re updating the line to avoid shipping this product, delete the Shipment Line.</errorMessage>
</ValidationRule>